# Extracter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: DeployUbuntuElf.yml  DeployWindows.yml
src/: Archive.h  ArchiveManager.cpp  ArchiveManager.h  ZipArchive.cpp  ZipArchive.h  main.cpp
test/: TestArchiveManager.h  TestZipArchive.h  test.cpp
